feat: #RBACK-238, java 21 migration